2009-08-11  Andreia Gaita  <avidigal@novell.com>

	* runtime.cpp: TimeManager should be the last thing destroyed, other
	objects might need to access it while disposing. r: alan

2009-08-11  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: cast so the modulo operation opers on int,
	not guint64. Fix sharedtiles usage. r:shana, lewing

2009-08-11  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::Paste): Change the multiline
	truncation test to explicitly check for \r, \n and 0x2028 instead
	of using g_unichar_type() which didn't return the expected values
	for these characters. Partial fix for drt 2003.
	(*Box::OnPropertyChanged): Updated for AddResource() API change.

	* textblock.cpp (TextBlock::OnPropertyChanged): Updated for
	AddResource() API change.

	* fontmanager.cpp (AddResource): Instead of having our callers
	generate a unique resource name, let us do it for them. Don't
	bother using mkstemp()/mkdtemp() since our root dir is already
	unique. Also fixed to reset the stream resource after consuming it
	so that if multiple textblocks/boxes/etc reuse the FontSource,
	things work properly. Partial fix for drt 444.

	r:lewing

2009-08-11  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: Controls aren't really auto-focused. What
	  happens is that when a focused control is removed from the
	  live tree SL does not emit a LostFocus event and so when the
	  control is added back into the tree it still thinks it has
	  focus. This call is still needed as there can be pending
	  GotFocus/LostFocus events waiting to be emitted. r: toshok.

2009-08-11  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: Make HandleUIKeyPress do the same thing as
	  HandleUIKeyRelease when there is no toplevel so it doesn't
	  null deref. r: sde

2009-08-10  Larry Ewing  <lewing@novell.com>

	* bitmapimage.cpp (CreateLoader): if the image isn't a png or a
	jpg abort the getresource call.

2009-08-07  Larry Ewing  <lewing@novell.com>
